--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "goal setter application",
   "main": "server.js",
   "scripts": {
-   "start":"node backend/server.js",
-   "server":"nodemon backend/server.js"
+    "start": "node backend/server.js",
+    "server": "nodemon backend/server.js"
   },
   "author": "Sohini B.",
   "license": "MIT",
@@ -13,6 +13,7 @@
     "colors": "^1.4.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-async-handler": "^1.2.0",
     "mongoose": "^6.8.4"
   },
   "devDependencies": {
